--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1><span class="seo">Horiseon</span></h1>
         <div>
             <ul>
                 <li>
@@ -24,7 +24,9 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+        <div class="hero">
+
+        </div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,17 +50,17 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
+    <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -70,7 +72,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
